k8s-rewrite/charts/web-app-stack/santos-web/service.yaml
# Santos Web Service
apiVersion: v1
kind: Service
metadata:
  name: santos-web
  namespace: website-stack
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: santos-web
