k8s-rewrite/charts/web-app-stack/santos-web/ingress.yaml
# Santos Web Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: santos-web-ingress
  namespace: website-stack
spec:
  rules:
    - host: santos-web.branconet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: santos-web
                port:
                  number: 80
